namespace GieudexPol.Application.DTOs
{
    public class TransactionDto
    {
        public int Id { get; set; }
        public string SenderUsername { get; set; } = string.Empty;
        public string ReceiverUsername { get; set; } = string.Empty;
        public decimal Amount { get; set; }
        public string CurrencySymbol { get; set; } = string.Empty;
        public string Status { get; set; } = string.Empty;
        public string TransactionType { get; set; } = string.Empty;
        public decimal AppliedFee { get; set; }
        public DateTime Timestamp { get; set; }
    }
}
