using GieudexPol.Domain.Entities;
using System;
using System.Collections.Generic;
using System.Threading.Tasks;

namespace GieudexPol.Application.Interfaces
{
    public interface IUserRepository
    {
        Task<User?> GetByIdAsync(int id);
        Task<IEnumerable<User>> GetAllAsync();
        Task AddAsync(User entity);
        Task UpdateAsync(User entity);
        Task DeleteAsync(User entity);
        Task<User?> GetByUsernameAsync(string username);
        Task<User?> GetByAuthIdAsync(Guid authId);
    }
}
